# rust-featurecounts

./: CHANGELOG.md  Cargo.toml  LICENCE  README.md
src/: bam.rs  cli.rs  counter.rs  error.rs  gff.rs  main.rs  output.rs
