[package]
name = "rust-featurecounts"
version = "0.1.0"
edition = "2021"
authors = ["Sunju Kim <necoli1822@github>"]
description = "A fast feature counting tool for prokaryotic RNA-seq analysis, compatible with featureCounts"
license = "MIT"
readme = "README.md"
repository = "https://github.com/necoli1822/rust-featurecounts"
homepage = "https://github.com/necoli1822/rust-featurecounts"
documentation = "https://github.com/necoli1822/rust-featurecounts"
keywords = ["bioinformatics", "rna-seq", "genomics", "featurecounts", "prokaryote"]
categories = ["command-line-utilities", "science"]
exclude = ["tests/*", "benches/*", "*.bam", "*.gff", "*.gtf", "*.gbk"]

[dependencies]
# BAM file handling (pure Rust)
noodles = { version = "0.86", features = ["bam", "sam", "bgzf", "csi", "core"] }

# Parallel processing
rayon = "1.8"

# Interval tree for overlap detection
bio = "2.0"

# Performance: Fast HashMap
rustc-hash = "2.0"

# Performance: Small vector optimisation
smallvec = "1.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
